增加代码生成 日志重新规划划分

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
+# global
+# \u57DF\u540D\uFF0C\u4E00\u822C\u4E3A\u7F51\u5740\uFF0C\u6700\u7EC8\u4F1A\u5728\u65E5\u5FD7\u7B49\u4F53\u73B0\uFF0C\u6BD4\u5982\u65E5\u5FD7\u6309\u5E94\u7528\u540D\u5206\u6587\u4EF6\u5939
+application.domain.name=wwww.test.com
+# \u65E5\u5FD7
+logback.loghome=/data/weblog/business/www.test.com
 # datasource
 # \u9A71\u52A8
 datasource.driver=com.mysql.jdbc.Driver
