--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,16 @@
         <maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
         <tomcat7-maven-plugin.version>2.2</tomcat7-maven-plugin.version>
         <jetty-maven-plugin.version>9.4.6.v20170531</jetty-maven-plugin.version>
+        
+        <!-- 快速生成getter/setter -->
+        <lombok.version>1.16.18</lombok.version>
+        
+        <!-- AOP -->
+        <aspectjweaver.version>1.7.1</aspectjweaver.version>
+        
+        <!-- MyBatis代码生成器 -->
+        <mybatis-generator-maven-plugin.version>1.3.5</mybatis-generator-maven-plugin.version>
+        <mybatis-generator-core.version>1.3.5</mybatis-generator-core.version>
     </properties>
 
     <dependencies>
@@ -249,7 +259,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.16.18</version>
+            <version>${lombok.version}</version>
             <scope>provided</scope>
         </dependency>
         
@@ -257,7 +267,7 @@
         <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjweaver</artifactId>
-            <version>1.7.1</version>
+            <version>${aspectjweaver.version}</version>
         </dependency>
     </dependencies>
 
@@ -339,6 +349,38 @@
                     </webAppConfig>
                 </configuration>
                  -->
+            </plugin>
+            <!-- MyBatis代码生成器 -->
+            <plugin>
+                <groupId>org.mybatis.generator</groupId>
+                <artifactId>mybatis-generator-maven-plugin</artifactId>
+                <version>${mybatis-generator-maven-plugin.version}</version>
+                <configuration>
+                    <!--配置文件的位置-->
+                    <configurationFile>src/main/resources/mybatis/mybatis-generator-config.xml</configurationFile>
+                    <verbose>true</verbose>
+                    <overwrite>true</overwrite>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>Generate MyBatis Artifacts</id>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.mybatis.generator</groupId>
+                        <artifactId>mybatis-generator-core</artifactId>
+                        <version>${mybatis-generator-core.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>mysql</groupId>
+                        <artifactId>mysql-connector-java</artifactId>
+                        <version>${mysql-connector.version}</version>
+                    </dependency>
+                </dependencies>
             </plugin>
         </plugins>
     </build>
