--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,7 +10,7 @@
     <!-- 添加其它xml配置 -->
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>classpath*:spring/spring-base.xml,classpath*:spring/spring-mybatis.xml,classpath*:spring/spring-task.xml,classpath*:mybatis/mybatis-config.xml</param-value>
+        <param-value>classpath:spring/spring-base.xml</param-value>
     </context-param>
     <!-- spring的ApplicationContext 载入：spring的监听器 -->
     <listener>
@@ -30,7 +30,7 @@
         <!-- 通过初始化参数，指定xml文件的位置 -->
         <init-param>
             <param-name>contextConfigLocation</param-name>
-            <param-value>classpath*:spring/spring-mvc.xml</param-value>
+            <param-value>classpath:spring/spring-mvc.xml</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
